[gd_scene load_steps=74 format=3 uid="uid://5yp4e43ckdrj"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_m4brx"]
[ext_resource type="Texture2D" uid="uid://ikcchi1bmyrs" path="res://Sprites/Shark/Shark1.png" id="2_px875"]
[ext_resource type="Texture2D" uid="uid://bdivog3ud6gr" path="res://Sprites/Shark/Shark2.png" id="3_gasau"]
[ext_resource type="Texture2D" uid="uid://d05wftn5oy54p" path="res://Sprites/Shark/Shark3.png" id="4_5ma5o"]
[ext_resource type="Texture2D" uid="uid://ch8i7pej31kfq" path="res://Sprites/Shark/Shark4.png" id="5_wrx7s"]
[ext_resource type="Texture2D" uid="uid://bopdr8ypwa6id" path="res://Sprites/Shark/Shark5.png" id="6_716g1"]
[ext_resource type="Texture2D" uid="uid://cqdniuump4djq" path="res://Sprites/Shark/Shark6.png" id="7_gn5l1"]
[ext_resource type="Texture2D" uid="uid://c4rfkd6arhtvm" path="res://Sprites/Shark/Shark7.png" id="8_2abrt"]
[ext_resource type="Texture2D" uid="uid://dd5w8b6cnmfow" path="res://Sprites/Shark/Shark8.png" id="9_6ph23"]
[ext_resource type="Texture2D" uid="uid://chfcb5gy11be1" path="res://Sprites/Explosions/Explosion4/0001.png" id="10_dfhe1"]
[ext_resource type="AudioStream" uid="uid://dtpbwgcaf00bn" path="res://Sound/Boss hit 1.wav" id="11_g4ac8"]
[ext_resource type="Texture2D" uid="uid://cn2mgyrc20w6q" path="res://Sprites/Explosions/Explosion4/0002.png" id="11_r7t7p"]
[ext_resource type="Texture2D" uid="uid://brkgoddfwhykd" path="res://Sprites/Explosions/Explosion4/0003.png" id="12_lkm55"]
[ext_resource type="Texture2D" uid="uid://c1lb354tbg0em" path="res://Sprites/Explosions/Explosion4/0004.png" id="13_4ueo8"]
[ext_resource type="Texture2D" uid="uid://ct5iv3gvncrtt" path="res://Sprites/Explosions/Explosion4/0005.png" id="14_58qq8"]
[ext_resource type="Texture2D" uid="uid://o01v1180a6dx" path="res://Sprites/Explosions/Explosion4/0006.png" id="15_op4r7"]
[ext_resource type="Texture2D" uid="uid://6j2n7qawidh0" path="res://Sprites/Explosions/Explosion4/0007.png" id="16_nc7xf"]
[ext_resource type="Texture2D" uid="uid://4qalnv6u70nu" path="res://Sprites/Explosions/Explosion4/0008.png" id="17_ntu2t"]
[ext_resource type="Texture2D" uid="uid://brficao338eob" path="res://Sprites/Explosions/Explosion4/0009.png" id="18_f61ot"]
[ext_resource type="Texture2D" uid="uid://c6obxtjhbnpns" path="res://Sprites/Explosions/Explosion4/0010.png" id="19_fyp2c"]
[ext_resource type="Texture2D" uid="uid://bqf6dr0wktgue" path="res://Sprites/Explosions/Explosion4/0011.png" id="20_4o5n8"]
[ext_resource type="Texture2D" uid="uid://b5gn7tir7hfyu" path="res://Sprites/Explosions/Explosion4/0012.png" id="21_gn52o"]
[ext_resource type="Texture2D" uid="uid://dw7vcfrywwj10" path="res://Sprites/Explosions/Explosion4/0013.png" id="22_f45dj"]
[ext_resource type="Texture2D" uid="uid://nm6226pcmnar" path="res://Sprites/Explosions/Explosion4/0014.png" id="23_8ke02"]
[ext_resource type="Texture2D" uid="uid://c551rdutx4vj4" path="res://Sprites/Explosions/Explosion4/0015.png" id="24_e32dn"]
[ext_resource type="Texture2D" uid="uid://csj6hldjnb48t" path="res://Sprites/Explosions/Explosion4/0016.png" id="25_cywux"]
[ext_resource type="Texture2D" uid="uid://ddjd6bgr28vg6" path="res://Sprites/Explosions/Explosion4/0017.png" id="26_abuyv"]
[ext_resource type="Texture2D" uid="uid://dxehstb4vkcqg" path="res://Sprites/Explosions/Explosion4/0018.png" id="27_ujuh7"]
[ext_resource type="Texture2D" uid="uid://n0kty8k0cfpe" path="res://Sprites/Explosions/Explosion4/0019.png" id="28_mrbjv"]
[ext_resource type="Texture2D" uid="uid://cnwa8yeckdfeo" path="res://Sprites/Explosions/Explosion4/0020.png" id="29_lfea7"]
[ext_resource type="Texture2D" uid="uid://bum3yf0l8g1w5" path="res://Sprites/Explosions/Explosion4/0021.png" id="30_1wwox"]
[ext_resource type="Texture2D" uid="uid://cde33wv60rmgk" path="res://Sprites/Explosions/Explosion4/0022.png" id="31_btk50"]
[ext_resource type="Texture2D" uid="uid://c30jydja0ymoh" path="res://Sprites/Explosions/Explosion4/0023.png" id="32_tejem"]
[ext_resource type="Texture2D" uid="uid://trexhcxje46i" path="res://Sprites/Explosions/Explosion4/0024.png" id="33_h0vnm"]
[ext_resource type="Texture2D" uid="uid://c2kkxkkidhkwc" path="res://Sprites/Explosions/Explosion4/0025.png" id="34_k76uo"]
[ext_resource type="AudioStream" uid="uid://c5leefn8upwfs" path="res://Sound/hq-explosion-6288.mp3" id="37_g7u1l"]
[ext_resource type="AudioStream" uid="uid://vq6a2soq7m0i" path="res://Sound/glug-glug-glug-39140.mp3" id="38_86qdg"]
[ext_resource type="AudioStream" uid="uid://di185cyn4vxdo" path="res://Sound/powering_up_funny_sci-fi_dry-102263.mp3" id="39_sydp1"]
[ext_resource type="FontFile" uid="uid://dclfn1fjcq5i7" path="res://Fonts/PressStart2P-Regular.ttf" id="40_8elap"]
[ext_resource type="Texture2D" uid="uid://blmls1u06ubt2" path="res://Particles/flare_01.png" id="40_78iqq"]
[ext_resource type="Texture2D" uid="uid://dpnh82bexsu7d" path="res://Sprites/Explosions/WaterExplosion/Water__05.png" id="40_m3oy2"]
[ext_resource type="Texture2D" uid="uid://djcxss8vcxcyv" path="res://Sprites/Explosions/WaterExplosion/Water__04.png" id="41_b0oyw"]
[ext_resource type="AudioStream" uid="uid://ba0q1jycm55i3" path="res://Sound/laser5-47286.wav" id="41_l7qa2"]
[ext_resource type="Texture2D" uid="uid://5onixek6sj6r" path="res://Sprites/Explosions/WaterExplosion/Water__03.png" id="42_pm0a5"]
[ext_resource type="Texture2D" uid="uid://bh58c8y72t27l" path="res://Sprites/Explosions/WaterExplosion/Water__02.png" id="43_oogna"]
[ext_resource type="AudioStream" uid="uid://dee567wkg1cj" path="res://Sound/hq-explosion-6288-reverse.mp3" id="44_dvals"]
[ext_resource type="Texture2D" uid="uid://b132nn5mor6d3" path="res://Sprites/Explosions/WaterExplosion/Water__01.png" id="44_k56it"]
[ext_resource type="AudioStream" uid="uid://dl3w6ch8pux8d" path="res://Sound/yay-6120.mp3" id="45_fj125"]
[ext_resource type="AudioStream" uid="uid://dwquinjikuv4o" path="res://Sound/notification-for-game-scenes-132473.mp3" id="47_1ngf2"]
[ext_resource type="Texture2D" uid="uid://cd3uri86u07f" path="res://Textures/2d_lights_and_shadows_neutral_point_light.webp" id="49_nsf5y"]
[ext_resource type="AudioStream" uid="uid://1oto0eo2onwk" path="res://Sound/splash-by-blaukreuz-6261.wav" id="49_pjns7"]
[ext_resource type="Texture2D" uid="uid://be1l4stvjmcog" path="res://Sprites/Blood/bloodfx001_01.png" id="71_f4bva"]
[ext_resource type="Texture2D" uid="uid://cynsah81npsn3" path="res://Sprites/Blood/bloodfx001_02.png" id="72_657n3"]
[ext_resource type="Texture2D" uid="uid://d3tdosv5031k" path="res://Sprites/Blood/bloodfx001_03.png" id="73_olu8i"]
[ext_resource type="Texture2D" uid="uid://7tscp15rfq17" path="res://Sprites/Blood/bloodfx001_04.png" id="74_whboq"]
[ext_resource type="Texture2D" uid="uid://dy3rebfbsvpl0" path="res://Sprites/Blood/bloodfx001_05.png" id="75_h7um2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1hb8q"]
radius = 49.0
height = 126.0

[sub_resource type="SpriteFrames" id="SpriteFrames_wa15s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_px875")
}, {
"duration": 1.0,
"texture": ExtResource("3_gasau")
}, {
"duration": 1.0,
"texture": ExtResource("4_5ma5o")
}, {
"duration": 1.0,
"texture": ExtResource("5_wrx7s")
}, {
"duration": 1.0,
"texture": ExtResource("6_716g1")
}, {
"duration": 1.0,
"texture": ExtResource("7_gn5l1")
}, {
"duration": 1.0,
"texture": ExtResource("8_2abrt")
}, {
"duration": 1.0,
"texture": ExtResource("9_6ph23")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_dfhe1")
}, {
"duration": 1.0,
"texture": ExtResource("11_r7t7p")
}, {
"duration": 1.0,
"texture": ExtResource("12_lkm55")
}, {
"duration": 1.0,
"texture": ExtResource("13_4ueo8")
}, {
"duration": 1.0,
"texture": ExtResource("14_58qq8")
}, {
"duration": 1.0,
"texture": ExtResource("15_op4r7")
}, {
"duration": 1.0,
"texture": ExtResource("16_nc7xf")
}, {
"duration": 1.0,
"texture": ExtResource("17_ntu2t")
}, {
"duration": 1.0,
"texture": ExtResource("18_f61ot")
}, {
"duration": 1.0,
"texture": ExtResource("19_fyp2c")
}, {
"duration": 1.0,
"texture": ExtResource("20_4o5n8")
}, {
"duration": 1.0,
"texture": ExtResource("21_gn52o")
}, {
"duration": 1.0,
"texture": ExtResource("22_f45dj")
}, {
"duration": 1.0,
"texture": ExtResource("23_8ke02")
}, {
"duration": 1.0,
"texture": ExtResource("24_e32dn")
}, {
"duration": 1.0,
"texture": ExtResource("25_cywux")
}, {
"duration": 1.0,
"texture": ExtResource("26_abuyv")
}, {
"duration": 1.0,
"texture": ExtResource("27_ujuh7")
}, {
"duration": 1.0,
"texture": ExtResource("28_mrbjv")
}, {
"duration": 1.0,
"texture": ExtResource("29_lfea7")
}, {
"duration": 1.0,
"texture": ExtResource("30_1wwox")
}, {
"duration": 1.0,
"texture": ExtResource("31_btk50")
}, {
"duration": 1.0,
"texture": ExtResource("32_tejem")
}, {
"duration": 1.0,
"texture": ExtResource("33_h0vnm")
}, {
"duration": 1.0,
"texture": ExtResource("34_k76uo")
}],
"loop": false,
"name": &"explosion",
"speed": 25.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_bvem5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("75_h7um2")
}, {
"duration": 1.0,
"texture": ExtResource("74_whboq")
}, {
"duration": 1.0,
"texture": ExtResource("73_olu8i")
}, {
"duration": 1.0,
"texture": ExtResource("72_657n3")
}, {
"duration": 1.0,
"texture": ExtResource("71_f4bva")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_jthnu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("40_m3oy2")
}, {
"duration": 1.0,
"texture": ExtResource("41_b0oyw")
}, {
"duration": 1.0,
"texture": ExtResource("42_pm0a5")
}, {
"duration": 1.0,
"texture": ExtResource("43_oogna")
}, {
"duration": 1.0,
"texture": ExtResource("44_k56it")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_5c14i"]
offsets = PackedFloat32Array(0, 0.18894)
colors = PackedColorArray(1, 0, 0, 1, 0.029587, 0, 0.970413, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_lvy03"]
gradient = SubResource("Gradient_5c14i")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_k4dtl"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 75.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_lvy03")

[sub_resource type="Gradient" id="Gradient_hqx5m"]
colors = PackedColorArray(0.878431, 0.768627, 0, 1, 0.029587, 0, 0.970413, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_t1qpm"]
gradient = SubResource("Gradient_hqx5m")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8u7m5"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 75.0
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
radial_accel_min = -10.4
radial_accel_max = -10.4
scale_min = 0.25
scale_max = 0.3
color_ramp = SubResource("GradientTexture1D_t1qpm")

[sub_resource type="Gradient" id="Gradient_80uc6"]
offsets = PackedFloat32Array(0, 0.580645)
colors = PackedColorArray(1, 0, 0, 1, 0.478431, 0, 0.0509804, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_k5rfa"]
gradient = SubResource("Gradient_80uc6")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ihmkv"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 75.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_k5rfa")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bywa3"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pgp4c"]
bg_color = Color(0.329412, 0.698039, 0.25098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1kikt"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jyh0b"]
bg_color = Color(0.972549, 0.321569, 0.580392, 1)

[node name="Player" type="CharacterBody2D"]
light_mask = 2
z_index = 1
position = Vector2(1253, 666)
collision_mask = 368
motion_mode = 1
script = ExtResource("1_m4brx")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(2.08165e-12, 2.08165e-12)
enabled = false
limit_left = 0
limit_top = 0
limit_right = 5300
limit_bottom = 2720
editor_draw_limits = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
rotation = 1.5708
scale = Vector2(0.75, 0.75)
shape = SubResource("CapsuleShape2D_1hb8q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 2
texture_filter = 1
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_wa15s")
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": false,
"source": "res://Shark.aseprite"
}

[node name="AnimatedSprite2DDamaged" type="AnimatedSprite2D" parent="."]
position = Vector2(2.08165e-12, -15)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_bvem5")
frame = 5
frame_progress = 1.0

[node name="AnimatedSprite2DSurgeReady" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_jthnu")
frame = 5
frame_progress = 1.0
speed_scale = 1.5

[node name="SurgeParticles" type="GPUParticles2D" parent="."]
modulate = Color(1, 1, 1, 0.305882)
emitting = false
amount = 64
process_material = SubResource("ParticleProcessMaterial_k4dtl")
texture = ExtResource("40_78iqq")
lifetime = 2.0
speed_scale = 2.0
randomness = 0.35
fixed_fps = 0
draw_order = 0

[node name="SurgeReadyParticles" type="GPUParticles2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.305882)
show_behind_parent = true
emitting = false
amount = 64
process_material = SubResource("ParticleProcessMaterial_8u7m5")
texture = ExtResource("40_78iqq")
randomness = 0.35
fixed_fps = 0
visibility_rect = Rect2(-100, -100, 10, 10)
draw_order = 0

[node name="HungryParticles" type="GPUParticles2D" parent="."]
modulate = Color(1, 1, 1, 0.305882)
emitting = false
amount = 64
process_material = SubResource("ParticleProcessMaterial_ihmkv")
texture = ExtResource("40_78iqq")
lifetime = 2.0
speed_scale = 2.0
randomness = 0.35
fixed_fps = 0
draw_order = 0

[node name="AimingLine" type="Line2D" parent="."]
points = PackedVector2Array(0, 0)
width = 2.0
default_color = Color(1, 0, 0, 1)

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(2.08165e-12, 2.08165e-12)
collision_mask = 20
collide_with_areas = true

[node name="PowerUpLabel" type="Label" parent="."]
visible = false
offset_left = -348.0
offset_top = -150.0
offset_right = 361.0
offset_bottom = -115.0
theme_override_fonts/font = ExtResource("40_8elap")
theme_override_font_sizes/font_size = 32
text = "POWER UP!"
horizontal_alignment = 1

[node name="EnergyProgressBar" type="ProgressBar" parent="."]
offset_left = -54.0
offset_top = -76.0
offset_right = 53.0
offset_bottom = -55.0
theme_override_styles/background = SubResource("StyleBoxFlat_bywa3")
theme_override_styles/fill = SubResource("StyleBoxFlat_pgp4c")
value = 50.0
show_percentage = false

[node name="FishProgressBar" type="ProgressBar" parent="."]
offset_left = -54.0
offset_top = -102.0
offset_right = 53.0
offset_bottom = -81.0
theme_override_styles/background = SubResource("StyleBoxFlat_1kikt")
theme_override_styles/fill = SubResource("StyleBoxFlat_jyh0b")
value = 50.0
show_percentage = false

[node name="SurgeProgressBar" type="ProgressBar" parent="."]
visible = false
offset_left = -54.0
offset_top = -128.0
offset_right = 53.0
offset_bottom = -107.0
theme_override_styles/background = SubResource("StyleBoxFlat_1kikt")
theme_override_styles/fill = SubResource("StyleBoxFlat_jyh0b")
value = 50.0
show_percentage = false

[node name="PowerUpTickTimer" type="Timer" parent="."]
one_shot = true

[node name="FishFrenzyTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FishFrenzyFireTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PowerPelletTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PowerPelletWarningTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="PlayerExplosionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ProgressBarBlinkTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="GrenadeRateTimer" type="Timer" parent="."]
one_shot = true

[node name="DoorOpenTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DoorCloseTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="HuntingKeyTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="HuntingDoorTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="PlayerHitGracePeriodTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true

[node name="SwimSurgeRunningTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="SwimSurgeReuseTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AudioStreamPlayerSpray" type="AudioStreamPlayer" parent="."]
stream = ExtResource("41_l7qa2")
bus = &"Effects"

[node name="AudioStreamPlayerHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_g4ac8")
volume_db = 2.811
bus = &"Effects"

[node name="AudioStreamPlayerExplosionReverse" type="AudioStreamPlayer" parent="."]
stream = ExtResource("44_dvals")
bus = &"Effects"

[node name="AudioStreamPlayerExplosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("37_g7u1l")
bus = &"Effects"

[node name="AudioStreamHealth" type="AudioStreamPlayer" parent="."]
stream = ExtResource("38_86qdg")
bus = &"Effects"

[node name="AudioStreamPowerUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("39_sydp1")
bus = &"Effects"

[node name="AudioStreamPlayerGotFish" type="AudioStreamPlayer" parent="."]
stream = ExtResource("45_fj125")
volume_db = 6.558
bus = &"Effects"

[node name="AudioStreamPlayerSelectedUpgrade" type="AudioStreamPlayer" parent="."]
stream = ExtResource("47_1ngf2")
bus = &"Effects"

[node name="AudioStreamPlayerSplash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("49_pjns7")

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
shadow_enabled = true
texture = ExtResource("49_nsf5y")
texture_scale = 10.12
height = 50.0

[connection signal="timeout" from="SwimSurgeRunningTimer" to="." method="_on_swim_surge_running_timer_timeout"]
[connection signal="timeout" from="SwimSurgeReuseTimer" to="." method="_on_swim_surge_reuse_timer_timeout"]
